Don't alter Item in code called from Item's destructor

QQuickItem::~QQuickItem calls setParentItem(null) before closing

This emits itemChange with ItemRemoved on the column view for that item

We then call ContentItem::forgetItem

And adjust the visibility.

This is problematic as we then start emitting all sorts of things after
our item is being destroyed. Objects monitoring, in this case the
attached accessiblity object can then do something that crash.

The only other caller of forgetItem is the removeItem method, so the
setVisible call is moved there.

Tested by setting up orca
Reproducing crash
Testing fix

BUG: 428481